--- a/styles.css
+++ b/styles.css
@@ -9,9 +9,38 @@ body{
 
 .container{
     display: flex;
-    justify-content: center;
     align-items: center;
     border: 1px solid black;
     height: 500px;
     width: 300px;
+    flex-direction: column;
+}
+
+.window{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid black;
+    height: 80px;
+    width: 280px;
+    margin: 10px;
+    background-color: rgb(195, 240, 255);
+}
+
+.buttons{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 290px;
+}
+
+.btn{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid black;
+    margin: 5px;
+    width: 300px;
+    height: 65px;
+
 }
