--- a/styles.css
+++ b/styles.css
@@ -1,46 +1,62 @@
-body{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: large;
-    display: flex;
+*, *::before, *::after {
+box-sizing: border-box;
+font-family: Helvetica, Arial, sans-serif;
+font-weight: normal;
+
+}
+
+body {
+     padding: 0;
+     margin: 0;
+     background: linear-gradient(to right, rgb(170, 255, 109), rgb(255, 174, 0))
+}
+
+.calculator-grid {
+    display: grid;
     justify-content: center;
-    align-items: center;
+    align-content: center;
+    min-height: 100vh;
+    grid-template-columns: repeat(4, 100px );
+    grid-template-rows: minmax(120px, auto) repeat(5, 100px);
+
+}
+
+.calculator-grid > button {
+    cursor: pointer;
+    font-size: 2rem; 
+    border: 1px solid white;
+    outline: none;
+    background-color: rgb(185, 222, 255, .75);
+}
+
+.calculator-grid > button:hover {
+    background-color: rgb(185, 222, 255, .90);
+}
+
+.span-two {
+    grid-column: span 2 ;
+}
+
+.output {
+    grid-column: 1 / -1;
+    background-color: rgb(0, 0, 0, .75);
+    display: flex;
+    align-items: flex-end;
+    justify-content: space-around;
     flex-direction: column;
+    padding: 10px;
+    word-wrap: break-word;
+    word-break: break-all;
 }
 
-.container{
-    display: flex;
-    align-items: center;
-    border: 1px solid black;
-    height: 500px;
-    width: 300px;
-    flex-direction: column;
+.output .previous-operand {
+    color: rgb(255, 255, 255, .75);
+    font-size: 1.5rem;
+    
 }
 
-.window{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border: 1px solid black;
-    height: 80px;
-    width: 280px;
-    margin: 10px;
-    background-color: rgb(195, 240, 255);
-}
-
-.buttons{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 290px;
-}
-
-.btn{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border: 1px solid black;
-    margin: 5px;
-    width: 300px;
-    height: 65px;
-
-}
+.output .current-operand {
+    color: white;
+    font-size: 2.5rem;
+    
+} 
